--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="Check Download Test"/>
 
+    <Button
+        android:id="@+id/btn_sp_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Check SharePreference Test"/>
+
 </LinearLayout>
