Add ViewUtils Method(BaseViewUtilsActivity BaseViewUtilsFragment ViewUtils) Add DisplayUtils

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,10 @@
         android:layout_height="wrap_content"
         android:text="Check SharePreference Test"/>
 
+    <Button
+        android:id="@+id/btn_change_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Change Fragment"/>
+
 </LinearLayout>
